Closed
Bug 214764
Opened 22 years ago
Closed 22 years ago
'Click here to download rest of message' feature does not work
Categories
(Thunderbird :: Mail Window Front End, defect)
Tracking
(Not tracked)
RESOLVED
FIXED
Thunderbird0.4
People
(Reporter: richcowan, Assigned: mscott)
References
Details
Attachments
(1 file, 1 obsolete file)
|
1.65 KB,
patch
|
Bienvenu
:
superreview+
|
Details | Diff | Splinter Review |
User-Agent: Mozilla/4.0 (compatible; MSIE 5.01; Windows NT 5.0)
Build Identifier: Mozilla Thunderbird 0.1
I am using Thunderbird stand-alone, and when I set my email
to not download messages above 50K, I get the message:
Click _here_ to download the rest of the message with the link
location:
pop://rich@mail.organizenow.net:110/?uidl=3e9b6b4500001389
Click on the word here does nothing. I have no idea if there is a way
to configure Thunderbird so that this will work now, or whether this
is a bug that will have to be fixed.
Reproducible: Always
Steps to Reproduce:
1.set your account settings (disk space) to not download large messages
2.send yourself a large message (i.e. a 100K attachment)
3.check your email
4.try clicking on the link at the bottom of message you received do
download the rest of it.
Expected Results:
Note: calling the account setting "disk space" is probably
not a good thing. Most people have plenty of disk space;
the reason they don't want to download everything is to save
connection time over a slow connection, like I am doing now on
the road. A better phrase for this would be "Downloading Options"
and then it should say on the option window, "To Save Time and
Disk Space" instead of what it now says, "To Save Disk Space:"
Comment 1•22 years ago
|
||
There are already reported Mozilla Mail&News bugs related to "truncated" mail.
(Type-A) Mail moved to a folder of different account including "Local Folders"
Bug-org 53255 Truncated message's link doesn't work if moved to LocalFolders.
Bug-org 149228 Mozilla should not filter an incomplete message (truncated for
download limit)
(Type-B) Truncated mail opend in preview pane
Bug-org 118432 Retrieving truncated POP3 message vanishes it
Bug-org 168330 downloading truncated message is easily aborted
(Type-C) Truncated mail opend in stand alone window
Bug-org 135523 POP: rest of truncated msg doesn't reload in standalone window
unless main mail window is closed
Isn't your problem a dup of above?
If you opend a truncated mail in preview pain and if you did not switched to
another mail while additional downloading by "Click Here", this must be a
Thunderbird specific problem, I think, because Mozilla Mail&News of latest trunk
succeffully downloaded truncated mails from my POP3 server in this case.
Comment 2•22 years ago
|
||
Correction of links to bug. Sorry for mistake and spam.
(Type-A) Mail moved to a folder of different account including "Local Folders"
Bug 53255 Truncated message's link doesn't work if moved to LocalFolders.
Bug 149228 Mozilla should not filter an incomplete message (truncated for
download limit)
(Type-B) Truncated mail opend in preview pane
Bug 118432 Retrieving truncated POP3 message vanishes it
Bug 168330 downloading truncated message is easily aborted
(Type-C) Truncated mail opend in stand alone window
Bug 135523 POP: rest of truncated msg doesn't reload in standalone window
unless main mail window is closed
| Reporter | ||
Comment 3•22 years ago
|
||
I read your comments, M-Wada, and from my recollection those
things from Mozilla do not apply to this. I had a single account
configured and I was not filtering the mail. When I downloaded
the message I tried to wait for downloading to occur and nothing
happened. In the event that my problem was not waiting for the
download to take place, this is still a bug. Whatever the
solution you all come up with, there should be a progress bar or
a "message download started, estimate completion in 0:45"
message to give visual feedback of the user's action.
Comment 4•22 years ago
|
||
Comfirmed on ThunderBird 0.1/Win-Me.
Nothing happened on clicking "Click Here" even when truncated mail was opened in
thread pane of 3 pane window.
popstate.dat was created. (probably correct).
> *<ServerName> <UserName>
> b 599f31726133cab77510f349d9acac6c
Mozilla Mail&News downloaded rest of message successfully when I did same operation.
"POP://" was found in
http://lxr.mozilla.org/seamonkey/source/mailnews/local/src/nsPop3Service.cpp#317
"nsPop3Service.cpp" was found in
http://lxr.mozilla.org/seamonkey/source/mailnews/local/src/Makefile.in#62 and
this is for module "msglocal".
Mozilla has both msglocal.dll and msglocal.xpt in Components directry but
Thunerbird 0.1 has msglocal.xpt only.
Is msglocal.dll related to this bug?
Comment 5•22 years ago
|
||
Following JavaScript error was issued on JavaScript console when clicked "Click
Here" of truncated mail.
(Thunderbird 0.1/Win-Me)
Error: uncaught exception: Load of
pop://<UserName>@<ServerName>:110/?uidl=a4ad2c0f062dffc9e0e02f803b9f173a denied.
"Same Origin Policy" violation?
| Assignee | ||
Comment 6•22 years ago
|
||
question. if you enable javascript in the message pane:
Tools / Options / Advanced / Privacy
does this feature then start working?
Status: NEW → ASSIGNED
Target Milestone: --- → Thunderbird0.3
Comment 7•22 years ago
|
||
Enabling JavaScript did not resolve the problem.
JavaScript error of "uncaught exception: Load of pop://... denied." was issued
even after enabling JavaScript in mail message.
| Assignee | ||
Comment 8•22 years ago
|
||
i wonder why the caps stuff is blocking this link click?
We'll fix this for 0.3
Comment 9•22 years ago
|
||
Denial itself is normal in case of security violation such as "Same Origin Policy".
See documents listed in "Documentation section" of "Component Security for Mozilla"
http://www.mozilla.org/projects/security/components/
Security policy seems to relate on this issue is "Signed Script Policy".
"Signed Scripts & Privileges: An Example" describes about this.
"modal" feature of window.open is an example of required "Privileges".
See bug 197351 and bug 180048 for "modal" dialog case.
| Assignee | ||
Comment 10•22 years ago
|
||
*** Bug 217273 has been marked as a duplicate of this bug. ***
| Assignee | ||
Comment 11•22 years ago
|
||
can anyone confirm that this still works correctly in mozilla 1.5 suite? Would
be good to know if we have a more global issue than just a thunderbird bug.
| Assignee | ||
Comment 12•22 years ago
|
||
cc'ing Chris. He may have an idea about why the security manager seems to be
blocking the pop: url. Looking at the code in
nsScriptSecurityManager::CheckLoadURI, we should be allowing the pop url to run:
{ "pop", AllowProtocol }
| Assignee | ||
Comment 13•22 years ago
|
||
I take it back. I don't think it has anything to do with the security manager
per say. nsScriptSecurityManager::CheckLoadURIStr is failing because we are
unable to turn pop://.... into a nsIURI and not because the security manager is
denying us the right to run the pop url.
| Assignee | ||
Comment 14•22 years ago
|
||
ignore comment #13 I was using a bogus pop url to test.
Comment 15•22 years ago
|
||
Answer to Comment 11 :
Mai&News of Mozilla 2003090904-trunc/Win-Me still downloaded truncated messages
successfully.
This bug is Thunderbird only problem.
Updated•22 years ago
|
QA Contact: asa
| Assignee | ||
Comment 16•22 years ago
|
||
I think I figured it out. Patch coming up. Too late for 0.3 though which has
already shipped.
| Assignee | ||
Comment 17•22 years ago
|
||
| Assignee | ||
Comment 18•22 years ago
|
||
Attachment #133429 -
Attachment is obsolete: true
| Assignee | ||
Updated•22 years ago
|
Target Milestone: Thunderbird0.3 → Thunderbird0.4
Comment 19•22 years ago
|
||
Scott, isn't nsWebShell.cpp shared modules with Firebird?
Wasn't removing "addbook"/"pop"/"mailbox" done intentionaly on splitting to
Firebird/Thunderbird?
If yes, I think different nsWebShell.cpp should be maintaind by Firebird and
Thunderbird or different module for this function should be used by
Firebird/Thunderbird.
Comment 20•22 years ago
|
||
The changes that Scott is adding are already inside of an #ifdef
MOZ_THUNDERBIRD. Bug 213538 is out there to get rid of the this ifdef.
Kevin
| Assignee | ||
Updated•22 years ago
|
Attachment #133431 -
Flags: superreview?(bienvenu)
Comment 21•22 years ago
|
||
Comment on attachment 133431 [details] [diff] [review]
trunk version of the patch
sr=bienvenu
Attachment #133431 -
Flags: superreview?(bienvenu) → superreview+
| Assignee | ||
Comment 22•22 years ago
|
||
fixed
Status: ASSIGNED → RESOLVED
Closed: 22 years ago
Resolution: --- → FIXED
Comment 23•22 years ago
|
||
Scott, which nightly?
I still can not find nightly newer than 10/08.
| Assignee | ||
Comment 24•22 years ago
|
||
have nto released a nigtly since this was fixed
Comment 25•22 years ago
|
||
Verified with 2003-10-24 Thunderbird-trunk build/Win-Me.
Thanks a lot, Scott.
However, another problem exists although it is not critical.
After successufull additional download by "Click Here", Thread Pane still
displayed both "Truncated" mail and "All downloaded" mail.
(POP Server. "Leave messages on server" is unchecked at Server Settings")
Since the mail was deleted from server on additional download, when I clicked
"Click Here" of "Truncated" mail again, Thunderbird connected to POP server
again and old "Truncated" mail diappeared from Thread Pane.
This indicates some flaw in cleanup process on addtional download.
I'll open new bug for this new problem.
Comment 26•22 years ago
|
||
I've opend Bug 223981.
| Assignee | ||
Comment 27•22 years ago
|
||
*** Bug 227293 has been marked as a duplicate of this bug. ***
Comment 28•11 years ago
|
||
I had also been also facing this problem for quite some time.
Today, when I again faced the same problem, I did File - Compact folders, and after that rest of the message duly downloaded on a single click.
It is just once try, others may also try it whether it works for them and then think over whether there is any connection of this solution to the problem, I am not sure.
Thanks.
--
Rawat
You need to log in
before you can comment on or make changes to this bug.
Description
•