effects thunderbird only until this ifdef gets properly removed. Bug #214764 --> 'Click here to download rest of message' feature does not work for thunderbird because we weren't running the pop url.

sr=bienvenu